--- a/fundoo notes/src/app/components/reset-password/reset-password.component.html
+++ b/fundoo notes/src/app/components/reset-password/reset-password.component.html
@@ -14,8 +14,7 @@
       <div>
         <mat-form-field appearance="outline" class="textbox">
           <mat-label>Password</mat-label>
-          <input matInput type="password" formControlName="password" id="password"
-            [ngClass]="{ 'is-invalid': submitted && resetPasswordForm.controls.password.errors }">
+          <input matInput type="password" formControlName="password" id="password" [ngClass]="{ 'is-invalid': submitted && resetPasswordForm.controls.password.errors }">
           <!-- <mat-error *ngIf="resetPasswordForm.controls.password.errors.required" class="error-text">Password is required</mat-error>
           <mat-error *ngIf="resetPasswordForm.controls.password.errors.minlength" class="error-text">Password must be at least 6 characters</mat-error> -->
         </mat-form-field>
@@ -23,8 +22,7 @@
       <div>
         <mat-form-field appearance="outline" class="textbox password">
           <mat-label>Confirm Password</mat-label>
-          <input matInput type="password" formControlName="confirmPassword" id="confirmPassword"
-            [ngClass]="{ 'is-invalid': submitted && resetPasswordForm.controls.confirmPassword.errors }">
+          <input matInput type="password" formControlName="confirmPassword" id="confirmPassword" [ngClass]="{ 'is-invalid': submitted && resetPasswordForm.controls.confirmPassword.errors }">
           <!-- <mat-error *ngIf="resetPasswordForm.controls.confirmPassword.errors.required" class="error-text">Confirm Password is required</mat-error>
           <mat-error *ngIf="resetPasswordForm.controls.confirmPassword.errors.required" class="error-text">Passwords must match</mat-error> -->
         </mat-form-field>
