--- a/fundoo notes/src/app/components/dashboard/dashboard.component.html
+++ b/fundoo notes/src/app/components/dashboard/dashboard.component.html
@@ -1,53 +1,52 @@
 <div class="example-container" [class.example-is-mobile]="mobileQuery.matches">
     <mat-toolbar class="toolbar">
-      <button class="menu-icon" mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
-      <span class="title-text" fxLayoutAlign="center center"><img src="../../../assets/note.png">Fundoo</span>
-<span class="search-div" fxLayoutAlign="center center">
-    <span class="material-icons search-icon">search</span>
-    <input class="search" type="search" placeholder="Search">
-</span>
-<span class="example-spacer"></span>
-<span class="material-icons">update</span>
-<span class="material-icons">list</span>
-<span class="material-icons">settings</span>
+        <button class="menu-icon" mat-icon-button (click)="snav.toggle()">
+            <mat-icon>menu</mat-icon>
+        </button>
+        <span class="title-text" fxLayoutAlign="center center"><img src="../../../assets/note.png">Fundoo</span>
+        <span class="search-div" fxLayoutAlign="center center">
+            <span class="material-icons search-icon">search</span>
+            <input class="search" type="search" placeholder="Search">
+        </span>
+        <span class="example-spacer"></span>
+        <button matTooltip="Refresh" class="material-icons">update</button>
+        <button (click)="showFirstM()" *ngIf="!showFirst" matTooltip="List view" class="material-icons">list</button>
+        <button (click)="showFirstM()" *ngIf="showFirst" matTooltip="Grid view" class="material-icons">view_module</button>
+        <button matTooltip="Settings" class="material-icons">settings</button>
+        <button matTooltip="Logout" class="material-icons" (click)="logout()">account_circle</button>
     </mat-toolbar>
-  
-    <mat-sidenav-container class="example-sidenav-container"
-                           [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
-      <mat-sidenav class="side-menu" #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
-                   [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
-        <mat-nav-list>
-          <!-- <a mat-list-item routerLink="." *ngFor="let nav of fillerNav">{{nav}}</a> -->
-          <div class="options" fxLayoutAlign="row" fxLayoutAlign="start center">
-            <button mat-icon-button>
-                <mat-icon class="material-icons-outlined">emoji_objects</mat-icon>
-              </button>Notes
-        </div>
-        <div class="options" fxLayoutAlign="row" fxLayoutAlign="start center" >
-            <button mat-icon-button>
-                <mat-icon class="material-icons-outlined">notifications</mat-icon>
-              </button>Remainders</div>
-        <div class="options" fxLayoutAlign="row" fxLayoutAlign="start center">
-            <button mat-icon-button>
-                <mat-icon class="material-icons-outlined">create</mat-icon>
-              </button>Edit Labels</div>
-        <div class="options" fxLayoutAlign="row" fxLayoutAlign="start center">
-            <button mat-icon-button>
-                <mat-icon class="material-icons-outlined">archive</mat-icon>
-              </button>Archive</div>
-        <div class="options" fxLayoutAlign="row" fxLayoutAlign="start center">
-            <button mat-icon-button>
-                <mat-icon class="material-icons-outlined">delete</mat-icon>
-              </button>Trash</div>
-        </mat-nav-list>
-      </mat-sidenav>
-  
-      <mat-sidenav-content class="main">
-        <!-- <p *ngFor="let content of fillerContent">{{content}}</p> -->
-
-        <router-outlet></router-outlet>
-      </mat-sidenav-content>
+    <mat-sidenav-container class="example-sidenav-container"[style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+        <mat-sidenav class="side-menu" #snav [mode]="mobileQuery.matches ? 'over' : 'side'"[fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+            <mat-nav-list>
+                <div class="options" routerLink="/dashboard/note" routerLinkActive="active-list-item" fxLayoutAlign="row" fxLayoutAlign="start center">
+                    <button mat-icon-button (click)="notes()" fxLayoutAlign="row" fxLayoutAlign="start center" (click)="snav.toggle()">
+                        <mat-icon class="material-icons-outlined">emoji_objects</mat-icon>Notes
+                    </button>
+                </div>
+                <div class="options"  routerLinkActive="active-list-item"  fxLayoutAlign="row" fxLayoutAlign="start center" >
+                    <button mat-icon-button fxLayoutAlign="row" fxLayoutAlign="start center" (click)="snav.toggle()">
+                        <mat-icon class="material-icons-outlined">notifications</mat-icon>Remainders
+                    </button>
+                </div>
+                <button class="options"  routerLinkActive="active-list-item" fxLayoutAlign="row" fxLayoutAlign="start center">
+                    <button mat-icon-button fxLayoutAlign="row" fxLayoutAlign="start center" (click)="snav.toggle()">
+                        <mat-icon class="material-icons-outlined">create</mat-icon>Edit Labels
+                    </button>
+                </button>
+                <div class="options" routerLink="/dashboard/archive" routerLinkActive="active-list-item" fxLayoutAlign="row" fxLayoutAlign="start center">
+                    <button mat-icon-button (click)="archive()" fxLayoutAlign="row" fxLayoutAlign="start center" (click)="snav.toggle()">
+                        <mat-icon class="material-icons-outlined">archive</mat-icon>Archive
+                    </button>
+                </div>
+                <div class="options" routerLink="/dashboard/trash" routerLinkActive="active-list-item" fxLayoutAlign="row" fxLayoutAlign="start center">
+                    <button mat-icon-button (click)="trash()" fxLayoutAlign="row" fxLayoutAlign="start center" (click)="snav.toggle()">
+                        <mat-icon class="material-icons-outlined">delete</mat-icon>Trash
+                    </button>
+                </div>
+            </mat-nav-list>
+        </mat-sidenav>
+        <mat-sidenav-content class="main">
+            <router-outlet></router-outlet>
+        </mat-sidenav-content>
     </mat-sidenav-container>
-  </div>
-  
-   
+</div>
