--- a/fundoo notes/src/app/components/forgot-password/forgot-password.component.html
+++ b/fundoo notes/src/app/components/forgot-password/forgot-password.component.html
@@ -14,8 +14,7 @@
       <div>
         <mat-form-field appearance="outline" class="textbox">
           <mat-label>Email</mat-label>
-          <input matInput type="text" formControlName="email" id="email"
-            [ngClass]="{ 'is-invalid': submitted && forgotPasswordForm.controls.email.errors }">
+          <input matInput type="text" formControlName="email" id="email" [ngClass]="{ 'is-invalid': submitted && forgotPasswordForm.controls.email.errors }">
           <!-- <mat-error *ngIf="forgotPasswordForm.controls.email.errors.required" class="error-text">Email is required</mat-error> -->
           <!-- <mat-error *ngIf="forgotPasswordForm.controls.email.errors.email" class="error-text">Email must be a valid email address</mat-error> -->
         </mat-form-field>
