--- a/fundoo notes/src/app/components/icons/icons.component.scss
+++ b/fundoo notes/src/app/components/icons/icons.component.scss
@@ -1,7 +1,18 @@
-// span {
-//     padding: 10px 3px 10px 3px;
-// }
-
 div {
     width: 100%;
+}
+
+.colorButton {
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    border-width: 1px;
+    border-color: grey;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+button {
+    border: 0px;
+    background: transparent;
 }
